--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ GEMINI_MODEL=gemini-2.0-flash
 AI_PROVIDER=gemini
 AI_LOG_REQUESTS=true
 AI_LOG_RESPONSES=true
+
+# AI Services - OpenAI Whisper STT
+OPENAI_API_KEY=your-openai-api-key
+WHISPER_MODEL=whisper-1
+
